[package]
name = "SubKrek"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["full"] }
trust-dns-resolver = "0.23"
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
indicatif = "0.17"
colored = "3.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.9.4"
url = "2.5"

[dev-dependencies]
tempfile = "3.10"
