[package]
name = "SubTahu"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
trust-dns-resolver = "0.23.2"
futures = "0.3.31"
clap = { version = "4.5.31", features = ["derive"] }
indicatif = "0.17.11"
colored = "3.0.0"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
regex = "1.11.1"
url = "2.5.4"

[dev-dependencies]
tempfile = "3.17.1"
tokio-test = "0.4.4"
